--- a/creature/index.html
+++ b/creature/index.html
@@ -1,1 +1,151 @@
-<h1>creature</h1>
+<!DOCTYPE html>
+<html  lang='ru' dir='ltr'>
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
+<title>Старые видео дают новые находки</title>
+</head>
+
+<body>
+<p>
+Вступление: просмотренное некоторое время назад видео “Экспертиза аномального полёта предмета, брошенного СЧ” (<a href="https://www.youtube.com/watch?v=od5TsGRkbA4">https://www.youtube.com/watch?v=od5TsGRkbA4</a>) натолкнуло на мысль пересмотреть старые видео внимательным, покадровым взглядом. Подход оказался плодотворным и просмотр видео <a href="https://www.youtube.com/watch?v=cZ0iqJPS-Ac">https://www.youtube.com/watch?v=cZ0iqJPS-Ac</a> в таком режиме привёл к любопытной находке. 
+</p>
+<p>
+Об исследуемом видео: само видео было записано 8 лет назад и снято на камеру-ловушку. В лагере исследователей Игоря Дмитриевича и Андрея Николаевича, за палаткой, на видео запечатлелось тёмное пятно, которое на месте тогда (а не на видео) не было видно – маскирующийся Снежный Человек.
+</p>
+<p>
+Новая находка: объект, движущийся с 12 секунды youtube-видео (временная метка в этот момент показывает 2015/07/11 04:00:34) по 14 секунду youtube-видео (временная метка в этот момент показывает 2015/07/11 04:00:36). Начало движения в правой части кадра – где-то между костром и лесом – прыжками влево. Потом направление движения меняется в сторону палатки, где объект практически теряется из виду. Далее, видно как объект продолжает движение от палатки влево. Внешний вид объекта непривычен – цвет похож на туман, а на разных кадрах угадываются разные части человекоподобной формы объекта. Движение очень быстрое.
+</p>
+<p>
+Для иллюстрации был записан gif с покадровым выделеннием объекта с помощью точек
+</p>
+<p>
+<img src="перемещение - размеченное.gif">
+</p>
+<p>
+Без точек
+</p>
+<p>
+<img src="перемещение.gif">
+</p>
+<p>
+Движение не прямолинейное. с изменением траектории. На рамзеченных кадрах 1-10 (общие фреймы видео 365-374) хорошо читается прыжок. На кадрах 11-15 (фреймы 375-379) вроде бы тоже. И ещё, возможно, на 53-57 (фреймы 417-421), но это уже трудно утверждать, поскольку на кадрах 18-59 (фреймы 382-423) объект виден хуже – предположу, что эту часть движения объект осуществляет через траву и видна лишь его часть, выступающая из травы. Возможно, что эта часть движения осуществляется на четвереньках.  
+</p>
+<p>
+Внешний вид лучше всего читается на фрейме 374. 
+</p>
+<p>
+<img src="увеличение с обводкой.png">
+</p>
+<p>
+Без обводки
+</p>
+<p>
+<img src="увеличение.png">
+</p>
+
+<p>
+Мои дальнейшие выкладки носят вероятностный характер – я скорее всего “где-то близко”, но в конкретных цифрах не вполне точен. Буду рад, если меня поправят.
+</p>
+
+<p>
+Для анализа движения объекта использовал программу Tracker версии 6.1.6 (<a href="https://physlets.org/tracker/">https://physlets.org/tracker/</a>). 
+Для продуктивной работы с ней нужно: выбрать диапазон фреймов видео; покадрово отметить объект; указать сколько кадров видео соответствует секунде времени; и задать эталонный размер, относительно которого будут вестись расчёты.
+</p>
+<p>
+Интересующий диапазон фреймов выбран: 364-423.<br>
+Для указания количества кадров в секунде пригодилась временная метка на видео – количество фреймов до смены секунд на ней: 30.<br>
+Покадровая отметка объекта на открытой правой части сравнительно легка, сложнее в траве - в центре и слева. При этом есть интересный технический момент – есть кадры когда объект практически не меняет своего положения, хотя на других передвижение объекта за время кадра существенно: 5-6 (фреймы 369-370), 12-13 (фреймы 376-377), 18-19 (фреймы 382-383), 24-25 (фреймы 388-389), 29-30 (фреймы 393-394), 31-32 (фреймы 395-396), 37-38 (фреймы 401-402), 40-41 (фреймы 404-405), 43-44 (фреймы 407-408), 50-51 (фреймы 414-415), 56-57 (фреймы 420-421).<br>
+Самая сложная часть с эталонным размером.<br>
+У меня не только нет точных размеров, но и возникает задача учёта искажения от расстояния – чем дальше объект находится от нижнего края кадра, тем короче он будет казаться – утрируя для иллюстрации – лес в верхней части кадра явно не может быть высотой в три палатки. Ещё одна проблема – трава – от неё видны лишь верхушки, а уровень земли на самом деле скрыт за ней и находится не известно на сколько ниже. 
+</p>
+<p>
+Для решения этой части задачи воспользуемся ещё одним видео той же местности с той же камеры-ловушки: <a href="https://www.youtube.com/watch?v=v_3cR2UQs1Q">https://www.youtube.com/watch?v=v_3cR2UQs1Q</a>
+Ближе всего к эталону – Игорь Дмитриевич. В главе своей книги, говоря про ширину следа,  он упоминал свой рост 186 см. С одной стороны рост при замерах выше, чем при естественном движении, с другой не известна высота обуви… Примем рост на кадре 180 см.<br>
+Уменьшение размеров в зависимости от удаления от нижнего края попробуем рассчитать по пропорции. Сделаем несколько замеров по мере удаления вверх по кадру. Пару в центре, и пару справа.
+</p>
+<p>
+<img src="принцип вычисления пропорции.png">
+</p>
+<p>
+Замеры:<br>
+mass_A<br>
+<table>
+<tr><td>x</td>		<td>y</td></tr>
+<tr><td>1.328638E2</td>	<td>2.491196E1</td></tr>
+<tr><td>1.340500E2</td>	<td>3.760519E2</td></tr>
+</table>
+mass_B
+<table>
+<tr><td>x</td>		<td>y</td></tr>
+<tr><td>1.874328E2</td>	<td>4.745134E1</td></tr>
+<tr><td>1.933642E2</td>	<td>3.784245E2</td></tr>
+</table>
+mass_C
+<table>
+<tr><td>x</td>		<td>y</td></tr>
+<tr><td>3.701205E2</td>	<td>7.710843E1</td></tr>
+<tr><td>3.748656E2</td>	<td>3.618165E2</td></tr>
+</table>
+mass_D
+<table>
+<tr><td>x		<td>y</td></tr>
+<tr><td>4.175718E2</td>	<td>9.015755E1</td></tr>
+<tr><td>4.140130E2</td>	<td>3.594439E2</td></tr>
+</table>
+</p>
+Нас интересует y координата: её разница между точками замера (длина отрезка). И расстояние от верха кадра до меньшей точки замера.
+<p>
+<table>
+<tr><td>Замер</td>	<td>	720-y1</td>	<td> 	длина отрезка</td></tr>
+<tr><td>A</td>	<td>	695,08804</td>	<td>	351,13994</td></tr>
+<tr><td>B</td>	<td>	672,54866</td>	<td>	330,97316</td></tr>
+<tr><td>C</td>	<td>	642,89157</td>	<td>	284,70807</td></tr>
+<tr><td>D</td>	<td>	629,84245</td>	<td>	269,28635</td></tr>
+</table>
+</p>
+<p>
+Проверим, “попадает” ли пропорция. <br>
+По координатам A, B и длине A рассчитываем длину B: 672,54866 x 351,13994 / 695,08804 = 339,753646343 против расчётного 330,97316.<br>
+По координатам B, C и длине B рассчитываем разницу C: 642,89157 x 330,97316 / 672,54866 = 316,378378421 против расчётного 284,70807.<br>
+По координатам C, D и длине C рассчитываем разницу D: 629,84245 x 284,70807 / 642,89157= 278,929195391 против расчётного 269,28635.<br>
+Больше всего промах между B и C. Возможно искажения размеров возникают не только при “движении вверх”, но и при “движении от центра горизонтали”. Поэтому для расчётов возьмём замер ближайший к исследуемому существу – D. 
+</p>
+<p>
+Разместим калибровочную линейку на кадре 9 (на 10 существо чётче, но прыжок уже завершается – вопрос травы и “на сколько далеко за травой земля”. Поэтому кадр 9 - в прыжке). Линейку разместим на ногах, Верхний конец калибровочной линейки отстоит от нижнего на длину, в соотвтетствии с пропорцией для расстояния от верха кадра до точки замера. 
+</p>
+<p>
+<img src="выставлена линейка.png">
+</p>
+<p>
+замерим существо. 
+</p>
+<p>
+<img src="1.2м.png">
+</p>
+<p>
+Получается порядка 1.2 м<br>
+Также воспользуемся тем, что у нас теперь есть все нужные для программы компоненты – теперь можно получить значения скоростей и ускорений существа. Но, видимо, с поправкой на область поблизости прыжка – чтобы калибровочная линейка была более-менее справедлива с учётом искажения размеров в заивисимости от положения на кадре. Скажем, это кадры 1-20.
+</p>
+<p>
+<img src="скорости и ускорения - локально.png">
+</p>
+<p>
+средняя скорость получается 9.9 м/с<br>
+среднее ускорение получается 73 м/с2
+</p>
+<p>
+Возможно реальные цифры могут несколько отличаться от расчётных – буду рад если найдутся люди, которые смогут поправить мои логические выкладки/замеры. Тем не менее, скорость значительна – это наглядно видно в сравнении скорости существа и скорости движений Андрея Николаевича.
+</p>
+<p>
+Выводы:
+<ol>
+<li>Анализ видео в “покадровом режиме” может принести новые находки.</li>
+<li>Видео, посвящённые исследованию Снежного Человека перспективны в плане новых находок. </li>
+<li>На видео https://www.youtube.com/watch?v=cZ0iqJPS-Ac , обнаружено существо, которое не было замечено ранее.</li>
+<li>За счёт анализа видео перемещения нового существа получены примерные значения его роста (1.2 м), скорости (9.9 м/с) и ускорения (73 м/с2).</li>
+<li>Скорость и внешний вид существа не позволяют мне его опознать. Кто это может быть?</li>
+</ol>
+</body>
